--- a/TaxiKit.Core/TaxiKit.Core.TestKit/TaxiKit.Core.TestKit.csproj
+++ b/TaxiKit.Core/TaxiKit.Core.TestKit/TaxiKit.Core.TestKit.csproj
@@ -10,10 +10,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TaxiKit.Core.TestKit</RootNamespace>
     <AssemblyName>TaxiKit.Core.TestKit</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
