--- a/TaxiKit.Core/TaxiKit.Core.TestKit/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core.TestKit/packages.config
@@ -17,4 +17,5 @@
   <package id="xunit.assert" version="2.0.0" targetFramework="net46" />
   <package id="xunit.core" version="2.0.0" targetFramework="net46" />
   <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net46" />
+  <package id="xunit.runner.console" version="2.0.0" targetFramework="net452" />
 </packages>
